# VeriAudit

./: .gitignore  README.md  pyproject.toml
veriaudit/: __init__.py  requirements.txt
veriaudit-contracts/: INTERFACES_LIGHT.md  TEAM_DIVISION.md
veriaudit/adapters/: base.py  registry.py
veriaudit/adapters/language/: cpp.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
veriaudit/adapters/vuln_class/: command_injection.py  deserialization.py  memory_corruption.py  path_traversal.py  sql_injection.py
veriaudit/agents/: all_agents.py  base_agent.py  orchestrator.py
veriaudit/cli/: main.py
veriaudit/config/: default.yaml
veriaudit/core/: __init__.py  container_pool.py  contradiction_detector.py  event_ledger.py  exceptions.py  finding_state_machine.py  invariants.py  judge_engine.py  scheduler.py  schema.py
veriaudit/db/: __init__.py  index.py
veriaudit/docker/: Dockerfile.cpp-fuzz
veriaudit/mcp_servers/: base_mcp.py  build_mcp.py  cpg_mcp.py  evidence_mcp.py  exploit_mcp.py  fuzz_mcp.py  repo_mcp.py  report_mcp.py  sast_mcp.py
veriaudit/rag/: chunker.py  query.py  vector_store.py
veriaudit/tests/: test_adapters.py  test_core_engine.py  test_event_ledger.py  test_finding_state_machine.py  test_index.py  test_invariants.py  test_judge_engine.py
