[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriaudit"
version = "0.1.0"
description = "Lightweight security audit framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
veriaudit = "veriaudit.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["veriaudit/tests"]
pythonpath = ["."]
